--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,25 @@
+spring:
+  jpa:
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate:
+        #        dialect: org.hibernate.dialect.MySQL8Dialect
+        format_sql: true
+        transaction.jta.platform: org.hibernate.service.jta.JtaPlatform
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: 6379
+      password: ${REDIS_PW}
+
+  datasource:
+    url: ${DB_URL} # mysql:3306/?? ??
+    username: root
+    password: ${DB_PW}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
 springdoc:
   api-docs:
     enabled: true
@@ -9,4 +31,11 @@ springdoc:
     operationsSorter: method
     path: /swagger-ui.html
 
+jwt:
+  secret-key: ${JWT_SECRET}
+  access-token-expiration: 300000 # 5m
+  refresh-token-expiration: 86400000 # 24h
 
+admin:
+  username: ${ADMIN_NAME}
+  password: ${ADMIN_PW}
