--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        #        dialect: org.hibernate.dialect.MySQL8Dialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
         format_sql: true
-        transaction.jta.platform: org.hibernate.service.jta.JtaPlatform
+#        transaction.jta.platform: org.hibernate.service.jta.JtaPlatform
   data:
     redis:
       host: ${REDIS_HOST}
