--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
@@ -19,6 +19,10 @@ spring:
     username: root
     password: ${DB_PW}
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
 
 springdoc:
   api-docs:
